--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "backbone": "^1.2.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
@@ -17,6 +18,7 @@
     "less-middleware": "1.0.x",
     "mongoose": "^4.3.3",
     "morgan": "~1.6.1",
+    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
